--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="card-have-read">
-                        have read: <span class="span-read">✓</span>
+                        have read: <span class="span-read" onclick="toggleReadStatus(this)">✓</span>
                     </div>
                 </div>
 
@@ -123,7 +123,7 @@
 
                     <div class="card-have-read">
                         have read:
-                        <span class="span-notread">×</span>
+                        <span class="span-notread" onclick="toggleReadStatus(this)">×</span>
                     </div>
                 </div>
 
@@ -146,7 +146,7 @@
 
                     <div class="card-have-read">
                         have read:
-                        <span class="span-notread">×</span>
+                        <span class="span-notread" onclick="toggleReadStatus(this)">×</span>
                     </div>
                 </div>
 
@@ -170,7 +170,7 @@
 
                     <div class="card-have-read">
                         have read:
-                        <span class="span-notread">×</span>
+                        <span class="span-notread" onclick="toggleReadStatus(this)">×</span>
                     </div>
                 </div>
 
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="card-have-read">
-                        have read: <span class="span-read">✓</span>
+                        have read: <span class="span-read" onclick="toggleReadStatus(this)">✓</span>
                     </div>
                 </div>
             </div>
